--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: node_js
+before_script: cd dataApp
 node_js:
   - "8"
 
 cache:
   yarn: true
   directories:
-    - "dataApp/node_modules"
+    - "node_modules"
 
 branches:
   only:
@@ -23,6 +24,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_ACCESS_TOKEN
   target-branch: gh-pages
-  local-dir: dataApp/dist
+  local-dir: dist
   on:
     branch: master
