--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_ACCESS_TOKEN
-  target-branch: gh-pages
+  target-branch: master
   local-dir: dist
   on:
     branch: master
